--- a/index.html
+++ b/index.html
@@ -8,138 +8,144 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <a class="logo" href="index.html">
+          <a class="logo">
             <img src="logo" alt="логотип">
           </a>
-          <ul class="menu-block">
+          <ul class="menu-list">
             <li class="menu-item">
-              <a href="menu-link" href="#"></a>
+              <a class="menu-link" href="#"></a>
             </li>
             <li class="menu-item">
-              <a href="menu-link" href="#"></a>
+              <a class="menu-link" href="#"></a>
             </li>
             <li class="menu-item">
-              <a href="menu-link" href="catalog.html"></a>
+              <a class="menu-link" href="catalog.html"></a>
             </li>
             <li class="menu-item">
-              <a href="menu-link" href="#"></a>
+              <a class="menu-link" href="#"></a>
             </li>
           </ul>
           <div class="menu-item">
-            <a href="menu-link basket" href="#"></a>
+            <a class="menu-link basket" href="#"></a>
           </div>
         </nav>
-        <section class="slider">
-          <input class="btn-1" type="radio" name="slider-btn" id="slider-field" checked>
-          <input class="btn-2" type="radio" name="slider-btn" id="slider-second">
-          <input class="btn-3" type="radio" name="slider-btn" id="slider-last">
-          <div class="slider-btn">
-            <label for="slider-field"></label>
-            <label for="slider-second"></label>
-            <label for="slider-last"></label>
+        <div class="slider-list">
+          <div class="slider-button">
+            <input class="btn-field" type="radio" name="slider-btn" id="slider-1" checked>
+            <input class="btn-second" type="radio" name="slider-btn" id="slider-2">
+            <input class="btn-last" type="radio" name="slider-btn" id="slider-3">
+            <div class="slider-btn">
+              <label for="slider-1"></label>
+              <label for="slider-2"></label>
+              <label for="slider-3"></label>
+            </div>
           </div>
-        </section>
-        <section class="slider-1">
-          <b>Долго, дорого, скорпулезно</b>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a href="#">Узнать больше</a>
-        </section>
-        <section class="slider-2">
-          <b>Любим математикукак никто другой</b>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <a href="#">Узнать больше</a>
-        </section>
-        <section class="slider-3">
-          <b>Только ночь, только хардкор</b>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a href="#">Узнать больше</a>
-        </section>
+          <div class="slider-item">
+            <b class="tagline">Долго, дорого, скорпулезно</b>
+            <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+            <a claaa="link" href="#">Узнать больше</a>
+          </div>
+          <div class="slider-item">
+            <b class="tagline">Любим математикукак никто другой</b>
+            <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a claaa="link" href="#">Узнать больше</a>
+          </div>
+          <div class="slider-item">
+            <b class="tagline">Только ночь, только хардкор</b>
+            <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a claaa="link" href="#">Узнать больше</a>
+          </div>
+        </div>
       </div>
     </header>
     <main class="main-item">
-      <h2>Услуги</h2>
-      <section class="features">
-        <ul class="features-list">
-          <li class="features-item">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li class="features-item">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-          <li class="features-item">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a href="#">ЗАКАЗАТЬ</a>
-          </li>
-        </ul>
-      </section>
-      <article class="description">
-        <section class="description-item">
-          <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <h3>Выполняем заказы на разработку</h3>
-          <ul class="offers">
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+      <div class="container">
+        <section class="features">
+          <h2 class="head-hidden">Услуги</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="head">Веб-сайты</h3>
+              <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+            </li>
+            <li class="features-item">
+              <h3 class="head">Приложения</h3>
+              <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+            </li>
+            <li class="features-item">
+              <h3 class="head">Презентации</h3>
+              <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a claaa="link" href="#">ЗАКАЗАТЬ</a>
+            </li>
           </ul>
         </section>
-        <aside class="statistics">
-          <h3>с 2004 года Любим точность во всем:</h3>
-          <table class="main-table">
-            <tr>
-              <th>146%</th>
-              <th>100%</th>
-              <th>50%</th>
-            </tr>
-            <tr>
-              <td>Уровень самоотдачи</td>
-              <td>Соблюдение сроков</td>
-              <td>Минимальная предоплата</td>
-            </tr>
-          </table>
-        </aside>
-      </article>
-      <section class="gallery">
-        <ul>
-          <li><img src="" alt="Академия"></li>
-          <li><img src="" alt="Бородински"></li>
-          <li><img src="" alt="Пинк"></li>
-          <li><img src="" alt="Мишка"></li>
-        </ul>
-      </section>
+        <article class="description">
+          <section class="description-list">
+            <b class="tagline">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+            <p class="text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <b class="tagline">Выполняем заказы на разработку</b>
+            <ul class="offers-list">
+              <li class="offers-item">Веб-сайтов любой сложности</li>
+              <li class="offers-item">Мобильных приложений для iOS и Android</li>
+              <li class="offers-item">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </section>
+          <aside class="statistics">
+            <b class="tagline">с 2004 года Любим точность во всем:</b>
+            <table class="main-table">
+              <tr class="table-list">
+                <th class="table-item">146%</th>
+                <th class="table-item">100%</th>
+                <th class="table-item">50%</th>
+              </tr>
+              <tr class="table-list">
+                <td class="table-item">Уровень самоотдачи</td>
+                <td class="table-item">Соблюдение сроков</td>
+                <td class="table-item">Минимальная предоплата</td>
+              </tr>
+            </table>
+          </aside>
+        </article>
+        <section class="logo-list">
+          <ul class="logo-item">
+            <li><a href="#"><img src="" alt="Академия"></a></li>
+            <li><a href="#"><img src="" alt="Бородински"></a></li>
+            <li><a href="#"><img src="" alt="Пинк"></a></li>
+            <li><a href="#"><img src="" alt="Мишка"></a></li>
+          </ul>
+        </section>
+      </div>
       <section class="modal modal-map">
         <div class="footer-contacts">
-          <h3>NЁRDS DESIGN STUDIO</h3>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-          <a href="#">НАПИШИТЕ НАМ</a>
+          <h3 class="head">NЁRDS DESIGN STUDIO</h3>
+          <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+          <a claaa="link" href="#">НАПИШИТЕ НАМ</a>
         </div>
       </section>
     </main>
-    <footer class="footer-social">
-      <b>Давайте дружить, это выгодно!</b>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
-      <div class="footer-social">
-        <a class="social social-vk" href="#"></a>
-        <a class="social social-fb" href="#"></a>
-        <a class="social social-in" href="#"></a>
+    <footer class="main-footer">
+      <div class="container">
+        <b class="tagline">Давайте дружить, это выгодно!</b>
+        <p class="text">Скидка 10% для друзей из социальных сетей.</p>
+        <div class="footer-social">
+          <a class="social social-vk" href="#"></a>
+          <a class="social social-fb" href="#"></a>
+          <a class="social social-in" href="#"></a>
+        </div>
       </div>
     </footer>
     <form action="me" method="post">
-      <h3>Напишите нам</h3>
+      <b class="tagline">Напишите нам</b>
       <div class="important">
-        <label for="name-field"></label>
+        <label for="name-field">Ваше имя:</label>
         <input type="text" name="name" id="name-field" value="Имя Фамилия">
-        <label for="email-field"></label>
+        <label for="email-field">Ваш e-mail:</label>
         <input type="text" name="email" id="email-field" value="email@example.com">
       </div>
-      <label for="message-field"></label>
+      <label for="message-field">Текст письма:</label>
       <textarea name="message" id="message-field" value="В свободной форме"></textarea>
-      <span class="modal-close">x</span>
+      <button type="submit">ОТРРАВИТЬ</button>
     </form>
   </body>
 </html>
